[gd_scene format=3]

[ext_resource type="Script" path="res://Scripts/Battle/Map/battle_map_3d.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/Battle/Maps/UnitSpawnPoint.tscn" id="2"]
[ext_resource type="Resource" path="res://Data/Maps/battle_map_test.tres" id="3"]

[sub_resource type="PlaneMesh" id="1"]
size = Vector2(12, 7.2)

[sub_resource type="StandardMaterial3D" id="2"]
albedo_color = Color(0.2, 0.25, 0.3, 1)

[node name="BattleMap3D" type="Node3D"]
script = ExtResource("1")
map_data = ExtResource("3")
show_debug_tiles = true
show_blocked_boxes = true

[node name="GridPlane" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0)
material_override = SubResource("2")
mesh = SubResource("1")

[node name="Tiles" type="Node3D" parent="."]

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="AllySpawn0" parent="SpawnPoints" instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, 1.2)
team = 0
slot = 0
grid = Vector2i(1, 1)
yaw_degrees = 90.0

[node name="AllySpawn1" parent="SpawnPoints" instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, 2.4)
team = 0
slot = 1
grid = Vector2i(1, 2)
yaw_degrees = 90.0

[node name="AllySpawn2" parent="SpawnPoints" instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, 3.6)
team = 0
slot = 2
grid = Vector2i(1, 3)
yaw_degrees = 90.0

[node name="EnemySpawn0" parent="SpawnPoints" instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.6, 0, 1.2)
team = 1
slot = 0
grid = Vector2i(8, 1)
yaw_degrees = -90.0

[node name="EnemySpawn1" parent="SpawnPoints" instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.6, 0, 2.4)
team = 1
slot = 1
grid = Vector2i(8, 2)
yaw_degrees = -90.0

[node name="EnemySpawn2" parent="SpawnPoints" instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.6, 0, 3.6)
team = 1
slot = 2
grid = Vector2i(8, 3)
yaw_degrees = -90.0

[node name="Obstacles" type="Node3D" parent="."]
